# safemail-public

./: README.md
safemail-backend/: Cargo.toml  Dockerfile
safemail-backend/api/: Cargo.toml
safemail-backend/application/: Cargo.toml
safemail-backend/domain/: Cargo.toml
safemail-backend/domain/src/: crypto.rs  error.rs  lib.rs  message.rs  onetime_stamp.rs  serialize.rs  session.rs  stamp.rs  stamp_request.rs  system_key.rs  user.rs  validate.rs
safemail-backend/infrastructure/: Cargo.toml
safemail-backend/infrastructure/migrations/: 20240330232150_add_users_table.down.sql  20240330232150_add_users_table.up.sql  20240401145104_add_sessions.down.sql  20240401145104_add_sessions.up.sql  20240401160949_remove_password.down.sql  20240401160949_remove_password.up.sql  20240406201413_add_verify_keys.down.sql  20240406201413_add_verify_keys.up.sql  20240818161339_add_messages.down.sql  20240818161339_add_messages.up.sql  20240823155441_add_system_sign_keys.down.sql  20240823155441_add_system_sign_keys.up.sql  20240823163308_add_stamp_tracking.down.sql  20240823163308_add_stamp_tracking.up.sql  20240823165014_add_onetime_stamp_requests.down.sql  20240823165014_add_onetime_stamp_requests.up.sql  20240823182417_add_recipient_to_request.down.sql  20240823182417_add_recipient_to_request.up.sql
safemail-backend/infrastructure/src/: db.rs  lib.rs
safemail-backend/infrastructure/src/repositories/: message.rs  onetime_stamp.rs  session.rs  stamp_request.rs  system_key.rs  user.rs
safemail-backend/infrastructure/src/services/: cryptography.rs  serialize.rs
(+13 files in other folders)
