[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.22.0"
bcrypt = "0.15.1"
chrono = "0.4.37"
domain = { path = "../domain" }
openssl = "0.10.64"
rand = "0.8.5"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }
serde_json = { version = "1.0" }
uuid = "1.8.0"
